# MediaServer/media/query.go
@@ -2,12 +2,15 @@ package mediahandler
 
 import (
 	"MediaServer/serverutils"
+	"bytes"
 	"context"
-	"errors"
+	"encoding/json"
 	"fmt"
 	"log"
 	"strings"
 	"time"
+
+	"net/http"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -28,6 +31,32 @@ type SuggestionQueryParam struct {
 type PaginatedResponse struct {
 	Content []map[string]interface{} `json:"content"`
 	Next    string                   `json:"next,omitempty"`
+}
+type MediaAdvancedQueryParam struct {
+	Offset  uint64 `json:"offset"`
+	Limit   uint64 `json:"limit"`
+	Want    string `json:"want"`
+	OrderBy []struct {
+		Order string `json:"order"`
+		By    string `json:"by"`
+	} `json:"orderby"`
+	TextQuery  string      `json:"text_query"`
+	PointQuery [][]float32 `json:"point_query"`
+}
+
+type MediaAdvancedQueryResponse struct {
+	Content struct {
+		Elapsed float64     `json:"elapsed_time"`
+		Vector  [][]float32 `json:"vector"`
+	} `json:"content"`
+}
+type AdvancedQueryContent struct {
+	Results []map[string]interface{} `json:"results"`
+}
+
+type AdvancedQueryPaginatedResponse struct {
+	Content AdvancedQueryContent    `json:"content"`
+	Next    MediaAdvancedQueryParam `json:"next,omitempty"`
 }
 
 func QueryMedia(c *gin.Context) error {
@@ -102,17 +131,6 @@ func QueryMedia(c *gin.Context) error {
 	return nil
 }
 
-type MediaAdvancedQueryParam struct {
-	Offset  int    `json:"offset"`
-	Limit   int    `json:"limit"`
-	Want    string `json:"want"`
-	OrderBy []struct {
-		Order string `json:"order"`
-		By    string `json:"by"`
-	} `json:"orderby"`
-	TextSemanticSearch string `json:"text_sem_search"`
-}
-
 func QueryMediaRelated(c *gin.Context) error {
 	var param SuggestionQueryParam
 
@@ -134,7 +152,7 @@ func QueryMediaRelated(c *gin.Context) error {
 		panic(err)
 	}
 
-	fmt.Println("Query results: ", points)
+	// fmt.Println("Query results: ", points)
 
 	c.JSON(200, points)
 
@@ -143,10 +161,112 @@ func QueryMediaRelated(c *gin.Context) error {
 
 func AdvancedMediaQuery(c *gin.Context) error {
 	var param MediaAdvancedQueryParam
-	if c.BindJSON(&param) != nil {
+	var queryvectors []*qdrant.VectorInput
+	err := c.Bind(&param)
+	if err != nil {
 		c.Status(400)
-		return nil
+		return fmt.Errorf("Error binding JSON: %v", err)
 	}
 
-	return errors.New("Function not defined")
+	if param.Limit == 0 {
+		param.Limit = 20
+	}
+	if param.TextQuery == "" && len(param.PointQuery) == 0 {
+		c.Status(400)
+		return fmt.Errorf("No query provided")
+	}
+	// param.TextQuery = "Female portrait, high quality, detailed, artstation"
+	var vectorembeddings [][]float32
+
+	//Query points directly takes precedence over text query
+
+	if len(param.PointQuery) > 0 {
+		for _, vector := range param.PointQuery {
+			queryvectors = append(queryvectors, qdrant.NewVectorInput(vector...))
+		}
+		vectorembeddings = param.PointQuery
+	} else {
+
+		value := map[string]interface{}{
+			"texts_query": strings.Split(param.TextQuery, ","),
+		}
+
+		jsonvalue, err := json.Marshal(value)
+
+		if err != nil {
+			return fmt.Errorf("json marshal fail: %v", err)
+		}
+
+		res, err := http.Post(
+			"http://python-worker:8001/embed/text",
+			"application/json",
+			bytes.NewBuffer(jsonvalue),
+		)
+
+		if err != nil {
+			return fmt.Errorf("POST fail: %v", err)
+		}
+
+		// fmt.Println("Raw embedding response: ", res)
+
+		defer res.Body.Close()
+
+		var responseobj MediaAdvancedQueryResponse
+
+		err = json.NewDecoder(res.Body).Decode(&responseobj)
+
+		if err != nil {
+			return fmt.Errorf("Body parse fail: %v", err)
+		}
+
+		// fmt.Println("Parsed embedding response vector: ")
+		for _, vector := range responseobj.Content.Vector {
+			queryvectors = append(queryvectors, qdrant.NewVectorInput(vector...))
+		}
+		vectorembeddings = responseobj.Content.Vector
+	}
+
+	points, err := serverutils.Qdrantclient.Query(context.Background(), &qdrant.QueryPoints{
+		CollectionName: "media",
+		Query: qdrant.NewQueryRecommend(&qdrant.RecommendInput{
+			Positive: queryvectors,
+			// Negative: []*qdrant.VectorInput{
+			// 	qdrant.NewVectorInput(0.01, 0.45, 0.67),
+			// },
+		}),
+		// Query:          qdrant.NewQueryNearest(qdrant.NewVectorInput(responseobj.Content.Vector...)),
+		Offset: &param.Offset,
+
+		Limit: &param.Limit,
+	})
+
+	if err != nil {
+		return fmt.Errorf("Qdrant fail: %v", err)
+	}
+
+	results := make([]map[string]interface{}, len(points))
+	for i, p := range points {
+		results[i] = map[string]interface{}{
+			"id":      p.Id.GetUuid(),
+			"score":   p.Score,
+			"payload": p.Payload,
+		}
+	}
+
+	var nextQuery MediaAdvancedQueryParam = param
+	if uint64(len(points)) == param.Limit {
+		nextQuery = MediaAdvancedQueryParam{
+			PointQuery: vectorembeddings,
+			Offset:     param.Offset + param.Limit,
+		}
+	}
+
+	c.JSON(200, AdvancedQueryPaginatedResponse{
+		Content: AdvancedQueryContent{
+			Results: results,
+		},
+		Next: nextQuery,
+	})
+
+	return nil
 }
